--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -148,8 +148,9 @@ jobs:
 
       - name: Build project
         run: npm run build
+      
+      - name: Authenticate to npm
+        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
 
       - name: Publish to npm
         run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
